--- a/webapp/static/hf.css
+++ b/webapp/static/hf.css
@@ -15,6 +15,7 @@ a {
 }
 a:hover {
   text-decoration:  underline;
+  color:red;
 }
 a img {
   border:           0;
@@ -63,9 +64,16 @@ border:             thin dotted gray;
 input[type=text] {
   font-size:        115%;
   width:            30em;
+  border-radius: 15px;
 }
 input[type=submit] {
   font-size:        125%;
+  border-radius: 15px;
+
+}
+input[type=submit]:hover{
+background-color:red;
+transition:1s;
 }
 select {
   font-size:        125%;
