--- a/webapp/templates/entry.html
+++ b/webapp/templates/entry.html
@@ -8,7 +8,7 @@
 <table>
 <p>Use this form to submit a search request:</p>
 <tr><td>Phrase:</td><td><input name='phrase' type='TEXT' width='60'></td></tr>
-<tr><td>Letters:</td><td><input name='letters' type='TEXT' value='aeiou'></td></tr>
+<tr><td>Letters:</td><td><input name='letters' type='TEXT' value='Maxim'></td></tr>
 </table>
 <p>When you're ready, click this button:</p>
 <p><input value='Do it!' type='SUBMIT'></p>
